# git

./: .gitignore  CMakeLists.txt  ESP-111 项目与开发长期硬约束 (1).md  ESPC51  ESPC52 LCD + LVGL 移植最终任务书.md  csi_feature_schema_notes.md  csi_feature_schema_task_plan.md  findings.md  progress.md  s3_network_worker_notes.md  s3_network_worker_task_plan.md  s3_resource_lifecycle_notes.md  s3_resource_lifecycle_progress.md  s3_resource_lifecycle_task_plan.md  s3_serial_notes.md  s3_serial_task_plan.md  sdkconfig  task_plan.md  upload_pipeline_audit.md
.planning/: .active_plan
.planning/esp32-c5-s3-github-study/: agent-bridge-local.md  agent-esp-hal.md  agent-esp-sr.md  agent-esp-who.md  agent-esp-zigbee.md  agent-esp111-mapping.md  agent-matter-local.md  agent-project-index.md  agent-s3.md  agent-xiaozhi.md  findings.md  progress.md  task_plan.md
.planning/smart-home-agent-open-source-study/: findings.md  progress.md  task_plan.md
ESP-server/: .env.example  package.json  server.js
ESP-server/db/: database.db-shm  database.db-wal
ESP-server/docs/: api.md  device-status-schema-migration.md
ESPC51/: mic_preroll_diff.txt  sdkconfig
ESPC51/components/Middlewares/: CMakeLists.txt
ESPC51/components/Middlewares/app_orchestrator/: app_orchestrator.c
ESPC51/components/Middlewares/command_domain/system_command/: system_server_client.c  system_service.c
ESPC51/components/Middlewares/device_protocol/: envelope_builder.c
ESPC51/components/Middlewares/memory/: c5_memory.c
ESPC51/components/Middlewares/mic/: mic_adc_test.c  mic_adc_test.h
ESPC51/components/Middlewares/runtime/: app_runtime.h  c5_backpressure_controller.c  c5_event_bus.c  c5_event_bus.h  c5_resource_manager.c  c5_resource_manager.h  c5_runtime_workers.c  c5_runtime_workers.h
ESPC51/components/Middlewares/sensor_domain/bme690/server_client/: bme_server_client.c  bme_server_client.h
ESPC51/components/Middlewares/sensor_domain/bme690/service/: bme_sensor_service.c  bme_sensor_service.h
ESPC51/components/Middlewares/sensor_domain/csi_phase_a/: csi_feature.c  csi_phase_a_tests.c  csi_types.h
ESPC51/components/Middlewares/sensor_domain/csi_placeholder/: csi_server_client.c  csi_server_client.h  csi_service.c  csi_service.h
ESPC51/components/Middlewares/server_comm/: gateway_link.c  gateway_link.h  server_comm_http.c  server_comm_http.h
ESPC51/components/Middlewares/server_voice/: server_voice_client.c  server_voice_client.h
ESPC51/components/Middlewares/speaker/: speaker_player.c  speaker_player.h
ESPC51/components/Middlewares/terminal_config/: terminal_config.h
ESPC51/components/Middlewares/voice_domain/: voice_chain.c  voice_chain.h
ESPC51/components/Middlewares/wake/: local_wake_word.c  local_wake_word.h
ESPC52/: .gitignore  sdkconfig  sdkconfig.defaults
ESPC52/components/Middlewares/server_comm/: CMakeLists.txt  gateway_link.h  server_comm_config.h  server_comm_http.c  server_comm_types.h
ESPS3/: findings.md  progress.md  sdkconfig  sdkconfig.c5-backup-20260717  task_plan.md
ESPS3/components/Middlewares/: CMakeLists.txt
ESPS3/components/Middlewares/bme_cache_manager/: bme_cache_manager.c  bme_cache_manager.h
ESPS3/components/Middlewares/child_registry/: child_registry.c  child_registry.h
ESPS3/components/Middlewares/command_router/: command_router.c  command_router.h
ESPS3/components/Middlewares/csi_fusion/: csi_fusion.c  csi_fusion.h
ESPS3/components/Middlewares/csi_placeholder_gateway/: csi_placeholder_gateway.c  csi_placeholder_gateway.h
ESPS3/components/Middlewares/device_stream_gateway/: device_stream_gateway.c  device_stream_gateway.h
ESPS3/components/Middlewares/gateway_config/: gateway_config.h  gateway_wifi_credentials.h
ESPS3/components/Middlewares/gateway_orchestrator/: gateway_orchestrator.c  gateway_orchestrator.h
ESPS3/components/Middlewares/gateway_wifi/: gateway_wifi.c  gateway_wifi.h
ESPS3/components/Middlewares/local_http_server/: local_http_server.c  local_http_server.h
ESPS3/components/Middlewares/network_replay_worker/: network_replay_worker.c  network_replay_worker.h
ESPS3/components/Middlewares/network_worker/: network_worker.c  network_worker.h
ESPS3/components/Middlewares/protocol_adapter/: protocol_adapter.c
ESPS3/components/Middlewares/resource_manager/: resource_manager.c  resource_manager.h
ESPS3/components/Middlewares/runtime/: s3_event_bus.c  s3_event_bus.h  s3_scheduler.c  s3_scheduler.h
ESPS3/components/Middlewares/sensor_aggregator/: sensor_aggregator.c  sensor_aggregator.h
ESPS3/components/Middlewares/server_client/: server_client.c  server_client.h  server_client_voice_eof.h  server_client_voice_eof_test.c
ESPS3/components/Middlewares/voice_proxy/: voice_proxy.c
ESPS3/components/Middlewares/wake_prompt_cache_gateway/: wake_prompt_cache_gateway.c
components/BSP/: CMakeLists.txt
components/BSP/BME690/: CMakeLists.txt  bme690.c  bme690.h
components/BSP/IIC/: iic.c  iic.h
components/BSP/LCD/: lcd.c  lcd.h
components/LCD/: CMakeLists.txt  LCD.c  LCD.h
components/LCD/Driver/: lcd_st7789.c  lcd_st7789.h
components/LCD/Font/: font16.c  font24.c
components/LCD/UI/: lcd_ui.c  lcd_ui.h
docs/: c5-s3-code-smell-audit-2026-07-09-notes.md  c5-s3-code-smell-audit-2026-07-09-report.md  c5-s3-code-smell-audit-2026-07-09-task-plan.md  c5-s3-espserver-stability-audit-2026-07-10.md  csi-interference-optimization-xgboost-plan.md  csi-upload-pipeline-audit-2026-07-11.md  esp-c5-s3-architecture-optimization-audit-2026-07-10.md  espc51-espc52-esps3-link-compatibility-audit-2026-07-10.md  esps3-startup-esp-err-no-mem-diagnostic-2026-07-11.md  p1-p2-sensor-ingress-voice-resource-arbitration-execution-report-2026-07-13.md  project-code-quality-and-logic-audit-2026-07-10.md  voice-streaming-and-audio-stability-execution-log.md  voice-streaming-and-audio-stability-implementation-plan.md
main/: CMakeLists.txt  idf_component.yml  main.c
reports/: c51_c52_lcd_migration_matrix.md  lcd_c51_c52_consistency.md  lcd_lvgl_rollback.md  lcd_resource_report.md  lcd_source_audit.md  lcd_source_manifest.sha256  lcd_true_machine_validation.md
(+141 files in other folders)
